[gd_scene load_steps=12 format=3 uid="uid://dwulcrr5f6fcb"]

[ext_resource type="Script" uid="uid://dstbqj0hphqm1" path="res://Microjuegos/Branco/Secreto1/Script/28_Secreto_1.gd" id="1_f0ak7"]
[ext_resource type="Texture2D" uid="uid://dcnci5v3civas" path="res://Microjuegos/Branco/Secreto1/Sprite/FondoDesierto.png" id="2_4ewqs"]
[ext_resource type="Texture2D" uid="uid://byb024nkvksm2" path="res://Microjuegos/Branco/Secreto1/Sprite/CactusDesierto.png" id="4_deq00"]
[ext_resource type="Texture2D" uid="uid://0nvdvgvtnuvc" path="res://Microjuegos/Branco/Secreto1/Sprite/Goat.png" id="4_lwjgc"]
[ext_resource type="Script" uid="uid://cgama33t50rah" path="res://Microjuegos/Branco/Secreto1/Script/28_Monticulo.gd" id="5_j123y"]
[ext_resource type="Texture2D" uid="uid://c6flfneiyptix" path="res://Microjuegos/Branco/Secreto1/Sprite/PiedraDesierto.png" id="6_4jfsj"]
[ext_resource type="Script" path="res://Microjuegos/Branco/Secreto1/Script/28_Ekko.gd" id="6_8uis3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fl05q"]
radius = 30.0
height = 84.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jfsj"]
size = Vector2(143, 186)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_deq00"]
points = PackedVector2Array(-190, 70, -20, -40, 150, 70)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lwjgc"]
radius = 14.5
height = 29.0

[node name="28Secreto1" type="Node2D"]
script = ExtResource("1_f0ak7")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 1.0
offset_right = 1918.0
offset_bottom = 1080.0
texture = ExtResource("2_4ewqs")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Cactus" type="StaticBody2D" parent="."]
position = Vector2(186, 856)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cactus"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fl05q")

[node name="Sprite2D" type="Sprite2D" parent="Cactus"]
position = Vector2(13, 5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_deq00")

[node name="Cactus2" type="StaticBody2D" parent="."]
position = Vector2(764, 140)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cactus2"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fl05q")

[node name="Sprite2D" type="Sprite2D" parent="Cactus2"]
position = Vector2(13, 5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_deq00")

[node name="Cactus3" type="StaticBody2D" parent="."]
position = Vector2(1546, 167)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cactus3"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fl05q")

[node name="Sprite2D" type="Sprite2D" parent="Cactus3"]
position = Vector2(13, 5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_deq00")

[node name="Piedra" type="StaticBody2D" parent="."]
position = Vector2(212, 207)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piedra"]
position = Vector2(-16.5, -6)
shape = SubResource("RectangleShape2D_4jfsj")

[node name="Sprite2D" type="Sprite2D" parent="Piedra"]
position = Vector2(27, -7.00006)
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_4jfsj")

[node name="Piedra2" type="StaticBody2D" parent="."]
position = Vector2(1559, 594)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piedra2"]
position = Vector2(-16.5, 27)
shape = SubResource("RectangleShape2D_4jfsj")

[node name="Sprite2D" type="Sprite2D" parent="Piedra2"]
position = Vector2(27, -7.00006)
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_4jfsj")

[node name="Piedra3" type="StaticBody2D" parent="."]
position = Vector2(839, 897)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piedra3"]
position = Vector2(-16.5, 27)
shape = SubResource("RectangleShape2D_4jfsj")

[node name="Sprite2D" type="Sprite2D" parent="Piedra3"]
position = Vector2(27, -7.00006)
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_4jfsj")

[node name="TimerBarra" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="BarraTiempo" type="ProgressBar" parent="."]
offset_left = 1370.0
offset_top = 1021.0
offset_right = 1770.0
offset_bottom = 1048.0
max_value = 1.5
value = 1.5
show_percentage = false

[node name="TextoInstruccion" type="Label" parent="."]
offset_left = 460.0
offset_top = 7.0
offset_right = 1469.0
offset_bottom = 212.0
theme_override_colors/font_color = Color(0.984582, 0.99246, 0.999914, 1)
theme_override_font_sizes/font_size = 150
text = "INSTRUCCION"

[node name="Monticulo" type="StaticBody2D" parent="."]
position = Vector2(992, 623)
script = ExtResource("5_j123y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Monticulo"]
shape = SubResource("ConvexPolygonShape2D_deq00")

[node name="Sprite2D" type="Sprite2D" parent="Monticulo"]

[node name="Ekko" type="CharacterBody2D" parent="."]
position = Vector2(637, 586)
script = ExtResource("6_8uis3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ekko"]
position = Vector2(-2, 99)
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_lwjgc")

[node name="Sprite2D" type="Sprite2D" parent="Ekko"]
position = Vector2(-1, 0)
scale = Vector2(2, 2)
texture = ExtResource("4_lwjgc")

[connection signal="timeout" from="TimerBarra" to="." method="_on_timer_barra_timeout"]
